--- a/digital_marketing/src/App.css
+++ b/digital_marketing/src/App.css
@@ -242,6 +242,7 @@ header li.nav-item:active {
   padding: 50px;
   text-align: center;
   border-radius: 4px;
+  height: 100%;
 }
 
 .why-choose .why-choose-cards p {
@@ -267,6 +268,7 @@ header li.nav-item:active {
 .blog .card {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   border: none;
+  height: 100%;
 }
 
 .blog .card-title {
